--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,9 +1,20 @@
 ---
 driver:
   name: vagrant
+  network:
+  - ["forwarded_port", {guest: 80, host: 8084}]
+  - ["private_network", {ip: "192.168.33.33"}]
 
 provisioner:
   name: chef_zero
+  attributes:
+    otrs:
+      database:
+        password: otrs
+    mysql:
+      server_debian_password: "foo"
+      server_root_password: "foo"
+      server_repl_password: "foo"
 
 platforms:
   - name: debian-7.4
