--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -24,6 +24,7 @@ suites:
       - recipe[otrs::default]
     attributes:
       otrs:
+        version: 3.0.22
 #        version: 2.4.15
 #        version: 3.3.15
         version: 4.0.14
