--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,9 +9,12 @@ verifier:
   name: inspec
 
 platforms:
-  - name: debian-7.8
+  - name: debian-7.11
     run_list:
-    - recipe[apt::default]
+      - recipe[apt::default]
+  - name: debian-8.5
+    run_list:
+      - recipe[apt::default]
 
 suites:
   - name: default
